--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -14,4 +14,16 @@
       </div>
     </a>
   </div>
+
+  <div class="card bg-light mb-3" style="max-width: 16rem">
+    <a [routerLink]="['/albums/', 6]">
+      <div class="card-header">Bad data</div>
+      <div class="card-body">
+        <img src="/assets/images/un.png" style="width: 100%" />
+        <p class="card-text" style="padding: 2rem; text-align: center">
+          2019
+        </p>
+      </div>
+    </a>
+  </div>
 </div>
